# finally

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/agents/: reviewer.md
.claude/commands/: doc-review.md
backend/: demo_market_data.py  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  health.py  portfolio.py  watchlist.py
backend/app/db/: __init__.py  operations.py  schema.py
backend/app/llm/: __init__.py  service.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  stream.py
backend/static/: 404.html  index.html  index.txt
backend/static/_next/static/chunks/: 40.91e78246197dc185.js  d0709137.d71f6bb298794710.js  main-app-8af8aeb4ba168fa2.js  webpack-b35a91abc7abcb6f.js
backend/static/_next/static/chunks/app/: layout-0f7593bf4e8f12bd.js  page-9f6192ffd8a17b9d.js
backend/static/_next/static/css/: afd1dd12828dd748.css
backend/tests/api/: test_health.py  test_portfolio.py  test_watchlist.py
backend/tests/db/: __init__.py  test_operations.py
backend/tests/llm/: test_service.py
backend/tests/market/: test_cache.py  test_factory.py  test_massive.py  test_models.py  test_simulator.py  test_simulator_source.py
frontend/: package-lock.json  package.json  tailwind.config.ts
planning/: PLAN.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: INTEGRATION_REPORT.md  docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
(+15 files in other folders)
